PostGIS 3.4.1dev
xxxx/xx/xx
This version requires PostgreSQL 12-16, GEOS 3.6 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.12+ is needed.
To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.

* Bug Fixes *


 - #5568, Improve robustness of topology face split handling (Sandro Santilli)
 - #5548, Fix box-filtered validity check of topologies with edge-less faces
          (Sandro Santilli)
 - #5485, Fix postgis script on OpenBSD (Sandro Santilli)
 - #5516, Fix upgrade with views using deprecated function, among which:
          ST_AddBand (#5509), ST_AsGeoJSON (#5523) ST_AsKML (#5524)
          ST_Aspect (#5491), ST_BandIsNoData (#5510), ST_BandMetadata (#5502),
          ST_BandNoDataValue (#5503), ST_BandPath (#5511),
          ST_BandPixelType (#5512), ST_Clip (#5488), ST_Count (#5517),
          ST_GeoReference (#5514), ST_Intersects(raster, ...) (#5489),
          ST_LineCrossingDirection (#5518)
          ST_MakeEmptyRaster (#5508), ST_MapAlgebraFCT (#5500),
          ST_Polygon(raster, ...) (#5507), ST_SetBandIsNoData (#5505),
          ST_SetBandNoDataValue (#5506), ST_SetGeoreference (#5504),
          ST_SetValue (#5519),
          ST_Slope (#5490), ST_SummaryStats (#5515), ST_TileEnvelope (#5499)
          ST_Value (#5513, #5484), toTopoGeom (#5526).
          (Sandro Santilli)
 - #5494, Fix double-upgrade with view using st_dwithin(text, ...)
          (Sandro Santilli)
 - #5479, postgis_full_version() and postgis_gdal_version() sometimes
          warn of deprecated SRID: 2163 (Regina Obe)
 - Include elevation in output of ST_Contour when in polygonal mode (Paul Ramsey)
 - #5482, New Proj output is only available for proj 7.1+ (Regina Obe)
 - Fix JsonB casting issue (Paul Ramsey)

* Enhancements *

 - #5492, Have postgis script report presence of deprecated functions
          (Sandro Santilli)
 - #5493, Always try to drop deprecated function on upgrade
          (Sandro Santilli)

PostGIS 3.4.0
2023/08/15
